--- a/09-Programming-Basics.Rmd
+++ b/09-Programming-Basics.Rmd
@@ -1,3 +1,5 @@
+
+
 # Programming Basics
 
 
@@ -30,34 +32,835 @@
 
 
 ## Editor
+Editor Basics:
+
+-   9.1.1. What is the Editor
+-   9.1.2. Blind Editor
 
 ###  What is the Editor
+
+All manual parameter modification occurs in the **EDITOR**. (Programmer in some other consoles). The **Live Displays** show all values from **both** Controller outputs (Playbacks or Executors on some consoles) and fixtures in the Editor. Color coding is used to distinguish between values coming from the controllers and values in the **EDITOR**.
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2Fyfj9pENaY2RICC8bbyrV%2Fimage.png?alt=media&token=1519cebf-1974-4a4f-8f63-e1d347375abe)
+
+**Home a fixture in the Editor:**
+
+-   [FIXTURE] [#] [HOME]
+    
+**Home a fixture parameter in the Editor:**
+
+-   [FIXTURE] [#] {BANK} {PARAMETER} [HOME]
+    
+
+**Release a fixture in the Editor:**
+
+-   [FIXTURE] [#] RELEASE]
+    
+
+**Release a fixture parameter in the Editor:**
+
+-   [FIXTURE] [#] {BANK} {PARAMETER} [RELEASE]
+    
+
+**Reset (Clear) the Editor:**
+
+-   Press [RESET] key
+    
+
+**Reset (Clear) the Editor and clear the selection:**
+
+-   Press [VIBE] + [RESET]
+    
+
+See also: [9.3.10. Release and Home Sequences](/s/3kS90tLsADGm1ocbe7q9/9.-programming-basics/9.-programming-basics/9.3.10.-release-and-home-sequences)
+
 ### Blind Editor
 
+The Blind Editor is used to create or modify objects without outputting values to the stage
+
+Vibe has two Blind Editor behaviours:
+
+1.  Blind acts as a discrete editor separate from the live editor
+    
+2. Blind emulates the behaviour of single editor consoles where the main editors output is just disabled
+    
+
+**To build a new cue in the Blind Editor:**
+
+1.  Press [Blind] key flashes yellow and the Command Line turns yellow
+    
+2.  Program values using the Live Display for reference - no values will be outputted to the stage
+    
+3.  Store objects as usual - See also:
+    
+
+-   9.4. Creating and Applying Groups
+    
+-   10.3. Storing Cues and Scenes Directly to Controllers
+    
+-   10.5. Storing Cues to the Master Controller
+    
+-   10.6. Storing Qlist Cues to any Controller
+    
+-   12.2. Store and Modify Bank Libraries
+    
+
+**To edit a cue in the Blind Editor:**
+
+1. Press [Blind] - key flashes yellow and the Command Line turns yellow
+    
+2.  Press [QLIST] [#] [CUE] [#] [EDIT] - [UPDATE] flashes red
+    
+3. Make modifications to the cue
+    
+4. Press [UPDATE] to complete the sequence
+    
+
+**To emulate single editor blind:**
+
+1. Press [VIBE]+[BLIND] - Copies the Live Editor contents to the Blind Editor
+    
+2. Toggle [VIBE ]+[BLIND] - Copies the contents of the Blind Editor to the Live Editor (The original contents stay in the Blind Editor
 
 ## Editor Tools
 
-### Editor Tools
+**Editor Tools:**
+
+-   9.2.1. Selections Tools
+-   9.2.3. Transpose
+-   9.2.4. Pattern
+-   9.2.5. Fan Mode
+-   9.2.6. Highlight Mode
+-   9.2.7. Lowlight Mode
+-   9.2.8. Remainder Dim {Rem Dim}
+-   9.2.9 Home Scene
+
 ### Selections Tools 
-### Pattern
+
+Currently, Vibe has basic Selection Tools. Advanced tools are under development.
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FGx7aGZ388b54sCRa7IfH%2Fimage.png?alt=media&token=ae9608dc-9e11-4410-bc87-a2a01ecba6c3)
+
+-   {ODDS} - Absolute odd number in the range
+    
+-   {Evens} - Absolute even numbers in the range
+    
+-   {2/1} - Grouping of 2 starting at the first fixture of the range (Relative odd numbers)
+    
+-   {2/2} - Grouping of 2 starting at the second fixture of the range (relative even numbers)
+    
+-   {3/1} - Grouping of 3 starting at the first fixture of the range
+    
+-   {4/1} - Grouping of 4 starting at the first fixture of the range
+    
+-   {/} - Used as a separator. **Groupings of #/# Start fixture of the grouping**
+    
+-   **E.g.** [Fixture] [1] [➡️] [14] {Section Tools} [3] {/} [1] - would select fixtures 1,4,7,10,13 (as soon as the {/} is pressed **EVERY 3/1** will be displayed on the command line).
+    
+
+[Fixture] [1] [➡️] [14] {Section Tools} [3] {/} [2] - would select fixtures 2,5,8,11,14 (as soon as the {/} is pressed **EVERY 3/2** will be displayed on the command line).
+
 ### Transpose
+
+Transpose is accessed from the Editor Toolbar. It is used to reorder fixture selection based on a specified offset. This is particularly useful in creating interesting effects and fanning.
+
+**E.g. 1:**
+
+-   Fixture 1 ➡️ 12 {Transpose} 2 [ENTER] = 1+3+5+7+9+11+2+4+6+8+10+12
+    
+
+**E.g. 2:**
+
+-   Fixture 1 ➡️ 12 {Transpose} 3 [ENTER] = 1+4+7+10+2+5+8+11+3+6+9+12
+    
+
+**E.g. 3:**
+
+-   Fixture 1➡️12 {Transpose} 4 [ENTER] = 1+5+9+2+6+10+3+7+11+4+8+12
+
+### Pattern
+Is accessed from the Editor Toolbar. It can be used prior to entering the Advanced Effects editor to create more complex block patterns that are available using the basic {Block Of} and {Sub-Block Of} key in the effects editor.
+
+**To set a pattern:**
+
+1. Make a fixture selection
+    
+2. Tap {Pattern} on the Editor Toolbar - The Pattern pop-up will open. 👉 This is not an effect even though it is a dynamic display.
+    
+3. Tap the indicator at the top of the displayed fixtures. - it should turn white.
+    
+4.  Select a number under the Block Size header.
+    
+5. Tap the {Spread} icon. The fixture columns will expand to show the new fixture order.
+    
+6.  If desired make further order changes under the Offset Header and tap {offset} icon.
+    
+7.  Make further modifications or reset the selection with the {Reset} {Invert} {transpose} and {Invert Columns} keys.
+    
+8. Once finished, exit the pop-up by pressing [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png) or [ENTER].
+    
+9.   Open the Advanced Effects editor and program the desired effect.
+    
+
+-   See: 13.3. Advanced Effects Editor
+    
+
+> Simple Block and Sub Block groupings may be created within both Effects Editors. The pattern is for advanced blocks and groupings
+
 ### Fan Mode
-### Highlight Mode 
-### Lowlight Mode 
-### Remainder Dim {Rem Dim} 
+
+**Vibe has two methods to fan fixture parameters:**
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F7QSRPy48WfQ6gfvsaYUN%2Fimage.png?alt=media&token=014b95a6-a2b4-4bd6-885a-cd199313a2ad)
+
+1.  Using the [Fan] key and interface.
+    
+2.  Using keypad syntax.
+    
+
+See: 9.3.7. Fixture Selection (Detailed)
+
+**Using [Fan] Mode:**
+
+1. Select the range of fixtures to be fanned.
+    
+2. Press [FAN] to enter Fan Mode.
+    
+3. Select a Function from the sliding picker.
+    
+4. Turn the encoder wheel of the parameter requiring fanning.
+    
+5. Toggle [FAN] to turn off Fan Mode.
+    
+
+> Selecting a different parameter will also turn Fan mode off.
+
+**Common Fan Functions are :**
+
+-   {Fade In} / = lowest to highest
+    
+-   {Fade Out} \ = highest to lowest
+    
+-   {Diagonal} -/- = Standard PAN Fan
+    
+-   {Saw Tooth} /\ = Mirror lowest on ends to highest in middle
+    
+-   {Mirror} / = Highest on ends to lowest in middle
+
+    
+
+> Function types may be freely changes while in Fan Mode to "audition" various results.
+
+>  Any Function created in the Function Editor of the Advanced Effect Editor may be applied to Fan
+
+**Block of and Sub Blocks:**
+
+1. Select the range of fixtures to be fanned.
+    
+2. Press [FAN] to enter Fan Mode.
+    
+3. Select a Function from the sliding picker.
+    
+4. Select Blocks of {#}
+    
+5. Select Sub Blocks {#}
+    
+6. Turn the encoder wheel of the parameter requiring fanning.
+    
+7. Toggle [FAN] to turn off Fan Mode.
+    
+**Examples of Blocks and Sub Blocks:**
+
+-   {Fade In} - Blocks of 1 and no Sub Block
+    
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FREHdakIY7QeXSPlYv3V1%2Fimage.png?alt=media&token=8f2ff9bd-894a-460b-9187-5fdeb9151f31)
+
+-   {Fade In} - Blocks of 4 no Sub Blocks
+    
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FgIpWqS8iD5thdqKc39lk%2Fimage.png?alt=media&token=6c52bbc5-2c00-4393-977c-d752b7d3b08d)
+
+-   {Fade In} - Blocks of 6, Sub Blocks of 2
+    
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FWZoHyBjnKOexUXRB5RJ8%2Fimage.png?alt=media&token=4b3561d5-ffa9-4f3d-a7ff-ada37bb05939)
+
+-   {Saw Tooth} - (Low-High Mirror) Blocks of 12, Sub Blocks 2
+    
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FvdgPZYHoe5CndTOViOyT%2Fimage.png?alt=media&token=f134c601-ac53-4dd8-9d4f-b7eca88ca64b)
+
+-   Moving Light Fixture with {Fade In} Dimmer and Color Fan, and {Diagonal} Pan Fan
+    
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F0miw7A3hvrDtyF3008eO%2Fimage.png?alt=media&token=dc06235d-9785-4cad-9868-5ed11c707cc7)
+
+Instead of fanning Blocks based on the selection, fixture Groups may also be used as Blocks.
+
+**To Fan Blocks By Groups:**
+
+-   Using the Group SKs or using the keypad, select the Groups to be fanned
+    
+-   Tap {Blocks By Group}
+    
+-   Use any of the above methods to fan parameters by Group Parameters may also be fanned using keypad syntax.
+    
+-   Fixture Selection (Detailed)
+
+### Highlight Mode
+
+Highlight and Lowlight modes are used to help identify the positions of fixtures so that they may be edited more easily.
+
+**Highlight Mode affects parameters and banks in the following way:**
+
+-   Dimmer - Full
+    
+-   Other Intensity parameters - home values and masked
+    
+-   Position - unchanged and editable
+    
+-   Color - home values and masked
+    
+-   Beam - home values and masked
+    
+-   Image - home values and masked
+    
+-   Shape - home values and masked
+    
+
+**To Highlight fixtures or Groups:**
+
+1. Select fixtures using keypad or using Groups.
+    
+2. Press [H.LIGHT] - The key will flash in red to indicate the mode is active. **All** fixtures of the selection will be set as specified above.
+    
+3. Press [NEXT] - The first fixture will remain "highlighted" and all other fixtures will return to their editor or stage values.
+    
+4.  Adjust Pan/Tilt as required and press [NEXT] to move to the next fixture.
+    
+5. Continue through the fixture selection using [NEXT] [PREV] until all fixtures are focused.
+    
+6. Press [H.LIGHT] again to turn off Highlight Mode. The red light will go out and fixtures will return to their current editor or stage values.
+    
+
+> Highlight/Lowlight may be entered before a selection is made. Press [ENTER] to Highlight the selection
+
+**To swap new fixtures into Highlight:**
+
+-   Select new fixtures or Groups and press [ENTER] while still in Highlight Mode - the Highlight selection will be swapped.
+    
+
+> Until [NEXT] [PREV] is pressed Groups will be appended to make up a larger Highlight selection.
+
+The Highlight may be customized when the default home values are too generic. Users may want to tighten the zoom or use a specific iris as a fixtures default.
+
+**To create a custom Highlight Scene:**
+
+1.   Set the values in the Editor similar to creating a Cue or a Scene
+    
+2.  Press [SCENE] [H.LIGHT] [STORE]
+    
+
+> The Highlight Scene only affects the active fixture.
+
+**To Delete the Highlight Scene:**
+
+-   Press [SCENE] [H.LIGHT] [DELETE]
+
+### Lowlight Mode
+
+Lowlight mode is used when many fixtures are lit up and therefore Highlight is not helpful. **Lowlight Mode affects parameters and banks in the following way:**
+
+-   Dimmer - 30% all fixtures except active fixture which will be at 100%
+    
+-   Other Intensity parameters - home values and masked.
+    
+-   Position - unchanged and editable
+    
+-   Color - home values and masked
+    
+-   Beam - home values and masked
+    
+-   Image - home values and masked
+    
+-   Shape - home values and masked Unlike Highlight, Lowlight maintains a value of 30% for dimmers while active.
+    
+
+**To "Lowlight" fixtures or Groups:**
+
+1.   Select fixtures using the keypad or using Groups.
+    
+2.  Press [L.LIGHT] - All dimmer parameters will go to 30%. [L.LIGHT] will flash in red to indicate the mode is active. All other fixtures of the selection will be set as specified above.
+    
+3. Press [NEXT] - The first fixture will go to a dimmer value of 100% and all other fixtures dimmer values will remain at 30%. Other parameters will return to their editor or stage values.
+    
+4. Adjust Pan/Tilt as required and press [NEXT] to move to the next fixture.
+    
+5. Continue through the fixture selection using [NEXT] [PREV] until all fixtures are focused.
+    
+6.  Press [L.LIGHT] again to turn off Highlight Mode. The red light will go out and fixtures will return to their current editor or stage values.
+
+### Remainder Dim {Rem Dim}
+
+**REM DIM** is an Editor Tool commonly used in theatre environments but can be useful in many other situations.
+
+-   **{REM DIM}** Toggles all dimmer values to 0 except those that are selected. If no value is given in the editor, the selected fixtures will maintain their current values and not create a hard move.
+    
+-   While in {REM DIM}, [Next]/[Prev] will swap the Rem Dim fixture forwards or backwards.
+    
+-   If a selection of multiple fixtures is made followed by {REM DIM} all unselected fixtures will go to 0. The selected fixtures will not be changed or entered into the editor.
+    
+-   If a selection of multiple fixtures is made, [Next]/[Prev] will force all but the first fixture in the selection to 0. The next press of [Next]/[Prev] will force the first fixture to 0 and release the next fixture. Fixtures in the selection will continue to swap from 0 to release with each press of [Next]/[Prev].
+    
+-   Pressing REM DIM again toggles the feature off and restores the stage look.
+    
+-   Cues may be stored with {REM DIM} on but once stored, {REM DIM} is turned off.
+
+
 ### Home Scene
+
+By default released fixtures return to their home values as defined by the device's fixture profile. The device profile is usually based on the manufacturer's suggested defaults, but sometimes the defaults are not appropriate. Vibe allows users to customize Home Values by building a Home Scene. When a fixture is programmed in a Home Scene it will take preference over its home values in the device profile.
+
+**Create a Home Scene:**
+
+1.  Program fixtures in the editor to values that will work best as home values.
+    
+2.  Press [SCENE] [HOME] [STORE] - When released fixtures will now use the Home Scene as a reference.
+    
+
+**Delete a Home Scene:**
+
+1.  Press [SCENE] [HOME] [DELETE] - Home values will return to the device profile's home values.
 
 ## Working with Fixtures
 
+Working with Fixtures:
+
+-   9.3.1. Fixture Selection basics
+    
+-   9.3.2. What are Parameters
+    
+-   9.3.3. Virtual Parameters
+    
+-   9.3.4. Smart Screen
+    
+-   9.3.5. Adjusting Parameters using the Wheel Picker
+    
+-   9.3.6. Grab
+    
+-   9.3.7. Fixture Selection (Detailed)
+    
+-   9.3.8. Setting Parameters using Main Encoder Wheels
+    
+-   9.3.9. Setting Parameters using Interactive Encoder Wheels
+    
+-   9.3.10. Release and Home Sequences
+
 ### Fixture Selection basics
+
+Fixtures are selected using the [FIXTURE] key on the keypad. They also may be stored and recalled using the [GROUP] key. Fixtures may also be interactively selected via the Live Display or Live Parameter Display.
+
+-   **[+] [-]** ➡️ keys are valid with Fixture selections and Groups.
+    
+-   **[FIXTURE]** ◾ (period) - Reselects the last selection.
+    
+-   **[FIXTURE]** ➡️ - Reselects all fixtures in the Editor.
+    
+-   **[CE]** - Backspaces the command line one character at a time but currently will not go back one command at a time.
+    
+-   **[VIBE]+[CE/CLEAR]** - Clears the command line to the beginning and ideal tee system.
+    
+-   **[RELEASE]**: ◾ First press releases the active parameters (last adjusted) for selected fixtures. ◾ Second press releases all remaining parameters for selected fixtures from the Editor.
+    
+-   **[DE SEL]** - Deselects all fixtures but maintains values in the Editor. This function is usually used to protect the operator from accidentally adjusting parameters in the Editor when they are temporarily captured. It may also be used to "idle" the command line to allow [TEXT] {SK} function while fixtures are still in the Editor.
+    
+-   **[RESET]** - Releases all parameters from the Editor.
+    
+-   **[VIBE]+[RESET]** - Releases all parameters from the Editor and releases all selected fixtures.
+    
+-   **[NEXT]/ [PREV]** - Increments or decrements fixtures in a selection. When used with a Group, will be confined to the fixtures in the Group.
+    
+-   **Trackball [X LOCK] / [Y LOCK]** - Locks the X or Y axis of the trackball.
+    
+-   **[RES]** - Sets global encoder resolution. Blue = Low 8 bit, Green = Medium 10 bit (Default) Red = High 16 bit.
+    
+
+> Holding the [VIBE] key down while turning an encoder temporarily sets the encoder to high resolution 16 bit.
+
+> Vibe uses a precision algorithm for encoders. Based on the starting resolution, the slower an encoder is turned, the more resolution it has.
+
 ### What are Parameters 
+
+
+Parameters are any features of a device that may be manipulated and stored in an object. Examples of parameters would be:
+
+-   Dimmer
+    
+-   Pan/Tilt
+    
+-   Cyan/Yellow/Magenta
+    
+-   Zoom
+    
+-   Gobo 1
+    
+-   Blade Rotate
+    
+
+In Vibe parameters are organized under six standard **Banks** and one special Bank:
+
+1.  Intensity
+    
+2.  Position
+    
+3.  Color
+    
+4.  Beam
+    
+5.  Image
+    
+6.  Shape
+    
+7.  Control 
+    
+
+>A special bank as its parameters is not stored in cues. Iaete d it eeade re l tmel meee gee to ffturee coatrol fuactoae) Parameter values may be set using either Vibe's intuitive Smart Screen picker system or conventional parameter wheels and keypad method.
+
+
 ### Virtual Parameters
+
+See:
+
+-   8.1. Virtual Parameters
+
+
+
 ### Smart Screen
+
+
+The 11.6" multi-touch monitor directly above the 4 encoder wheels is referred to as the **Smart Screen.**
+
+The **Smart Screen** is dedicated to displaying:
+
+-   Context sensitive interactive bank, and parameter information.
+    
+-   Encoder wheel displays.
+    
+-   Playback information for the controllers that are directly above it.
+    
+-   Special pop-ups for Libraries, Store options and Grab functions.
+    
+-   A simplified Effects editor.
+    
+-   Displays for Fan feature.
+    
+
+**The Smart Screen is divided into six sections:**
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F3MRjEUUrb6VfX3w0YMEK%2Fimage.png?alt=media&token=12cde89d-55a5-4a47-849c-065d9d89ac35)
+
+**Smart Screen - Intensity Bank**
+
+The Context sensitive area changes depending on the bank and fixture type. Where possible, similar parameters from different fixture types will be presented to the user using Vibe's universal fixture model. This means that is not necessary to memorize the manufacturer's specification of each fixture, as all fixtures are programmed in a similar consistent way.
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FSXwdoP1qpO3V3Nzz3eq1%2Fimage.png?alt=media&token=e00854cc-3f79-4c15-a005-2298b26891f5)
+
+**Smart Screen - Position Bank**
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2Fm76yn5bGr7LlFVxhnw6T%2Fimage.png?alt=media&token=87c24948-59c3-4196-a32d-f359ce83d0cf)
+
+**Smart Screen - Color Bank**
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FqdIGva7DvngrGPMce4HI%2Fimage.png?alt=media&token=370311fd-c7e7-4b0d-ba56-d4365138a394)
+
+**Smart Screen - Beam Bank**
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F7KApaRu54s0Enj8sCtut%2Fimage.png?alt=media&token=b040ab07-a243-4a76-a8c3-b2f15ec2e9b2)
+**Smart Screen - Image Bank**
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FmuRBpzSrmTGLiO3O0uWk%2Fimage.png?alt=media&token=2cda885c-5e96-421b-a8d7-786661546a25)
+
+**Smart Screen - Shape Bank**
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FnI7Q19jt5F3x0LsggVoF%2Fimage.png?alt=media&token=e1174f4f-f177-4dd5-9b31-cef0856d6a9c)
+**Smart Screen - Control**
+
+**Smart Screen Preferences:**
+
+-   **Settings:**
+    
+
+◾ Home - Returns menus to Settings level.
+
+◾ Format - Sets the view format for wheel displays. 
+• Percent 
+• Decimal 
+• Text 
+• Text + Percent
+
+◾ Resolution - Sets the Global wheel resolution. This may also be set by toggling the [Res] key over the trackball 
+• 8 bit - Blue on [Res] Key 
+• 10 bit - Green on [Res] key 
+• 12 bit - Red on [Res] key 
+• 16 bit - Yellow on [Res] key 
+• 24 bit - Magenta on [Res] key 
+
+◾ View - Sets behaviour of smart screen views.
+• Auto - Shows programming display when there are fixtures in the editor, and shows the controller displays for Aux Qkeys and Global Sliders when the editor is cleared. 
+• Programming - Maintains the programming display even with the editor released. 
+• Playbacks - Maintains the playback controller display even with fixtures in the editor. Wheels and wheel displays remain accessible.
+
+◾ Wheel Picker Display Modes: 
+• Smart - All wheels for the selected fixture are shown in the interactive wheel picker area. 
+• Parameter Steps - Pressing a parameter wheel or tapping the wheel display above it will display a picker list of all feature steps for the selected fixture. 
+• Extra Wheels - Displays wheel information for the additional context sensitive encoder wheels
+
+Smart Screen Effects Editor - See: 13.2. Smart Screen Effects Editor
+
+
+
 ### Adjusting Parameters using the Wheel Picker
+
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FiDTNh31IjI39T2GTkc3i%2Fimage.png?alt=media&token=e3b46448-3c04-4e7b-b728-72ef5d5f98f3)
+
+**Smart Screen Picker Programming**
+
+​
+
+To adjust fixture wheel parameter values: (Interactive Wheel Picker method)
+
+1.   Select the fixtures to program
+    
+2. Swipe or Drag the **Wheel Picker** on the right-hand side of the **Smart Screen** and browse to the wheel and slot you want to program. Common wheels are: ◾ Color Wheel ◾ Static Gobo Wheel ◾ Rotating Gobo Wheel ◾ Animation Wheel ◾ Prism Wheel
+    
+3.  Tap the wheel slot you wish to program and the context sensitive area or the **Smart Screen** will open with the appropriate picker.
+    
+4.  Adjust the virtual controls as needed.
+    
+
+> Most virtual controls are also mapped to the 4 physical wheels
+
+**To adjust parameter values: (standard programming method)**
+
+1.  Select the fixtures to program.
+    
+2.  Tap the **{BANK}** key of the parameter you wish to adjust.
+    
+3.   Banks may contain more than 4 wheels of parameters. Tapping the desired **{BANK}** key again, pages to the next set of 4 parameter wheels.
+    
+4.  The Assigned parameter wheel function is displayed on the **Wheel Display** at the bottom of the Smart Screen directly above the wheels.
+    
+5.  Rotate the large push wheel encoder of the parameter you wish to adjust.
+    
+6.  Values may be added directly from the keypad by: ◾ Pushing a parameter wheel downward to select the parameter. ◾ AT will appear on the command line ◾ Type a value from Zero ➡️ Full.
+    
+
+><span style="color:red">@ is only used for the dimmer parameter</span>.
+
+A Parameter value must be entered in 2 digits or one digit and the [Enter] key for whole numbers. E.g. 05, 50, 5 [ENTER] =50
+
+
 ### Grab
+
+Grab is a powerful tool for selecting fixtures that meet a number of conditions. By default [GRAB] selects all fixtures with intensity or virtual intensity values above Zero **Pressing [GRAB] without a selection opens up a pop-up on the Smart Screen. It contains the following options:**
+
+-   **{Filters}:** 
+◾ {Stage} - Select anything that is live on the stage and meets the conditions below. 
+◾ {Editor} -Select anything that is in the Editor and meets the conditions below. 
+◾ {Master Controller} (Playback) - Selects only fixtures on the Master Controller that meet the conditions.
+    
+-   **{Conditions}:** 
+◾ {All Fixtures} - Selects all fixtures that have any changes via the editor. 
+◾ {Active} - fixture has intensity value over zero. 
+◾ {Invisible} - recorded "hard" parameter values for fixtures that do NOT have an intensity value over zero. 
+◾ {Inactive} (fixtures that have NO recorded values).
+    
+-   **{Parameter Selection}**:
+◾ {All for Selected} Grabs all parameters for selected fixtures (shortcut is [VIBE]+[GRAB]) 
+◾ {Active (ENTER)} Select all "Active" fixtures and enters them into the Editor. (Shortcut is [GRAB] + [ENTER]) 
+◾ <span style="color:DodgerBlue">{Search & Replace}</span>.
+    
+-   [SET] [GRAB] selects all active fixtures filtered by set (Fixture/Channel/Spot/Matrix/Server/Custom)
+    
+
+**To Selectively Grab a Controller:**
+
+1.  **Press [GRAB]** - Grab Options pop-up will open
+    
+2. **Press any Slider/Qkey/Aux Qkey controller button** - All fixtures that are in the Controller's active cue and have dimmer levels above Zero (or meet the Grab conditions selected in the pop-up), will be selected.
+    
+
+> Pressing ENTER will put the selection in the EDITOR.
+
+**Grab Fixtures in a cue based on a {Library} SK selection:**
+
+1.   Press [GRAB] tap a {Library} SK - All fixtures with matching libraries will be selected
+    
+2. Tap another {Library} SK - The Library will be swapped to the new library
+    
+
+> This is especially useful for quickly swapping colors in cues containing libraries
+
+**Select all parameters for a fixture selection:**
+
+1.  Select the fixtures
+    
+2.   Press [VIBE]+[GRAB]
+    
+
+**Select all Parameters with hard and tracked values outputting to the stage:**
+
+1.   Press [GRAB] [ENTER]
+
+
+
 ### Fixture Selection (Detailed)
+
+
+> FIn this guide, FIXTURE will be the default SET but any SET (Channel, Spot, Matrix, Server, User) should also be applicable.
+
+> Default SET is changed by double pressing the appropriate SET key
+
+> Dimmer is implied, but parameter would normally be specified after  [+➡️ -] and before value.
+
+> **[CE]** will backspace the command line one character at a time. 
+> <span style="color:DodgerBlue">If more than one state is involved, the state will backspace right up until the idle state</span>.
+
+> **[Shift CE]** will clear the command line to the beginning and put the system in an idle state.
+
+ -   [Fixture] # [+ ➡️ -] [[Full]/[Zero] (@100 and @00 are valid if % or text display format).
+        
+    -   [Fixture] # [+ ➡️ -] [@] enter value. Two digits are required to complete value entry.
+        
+    -   [Fixture] # [+ ➡️ -] [@] [@] will set values to Full.
+        
+    -   [Fixture] # [+ ➡️ -] [@] single value, [ENTER]. E.g. [Fixture] [1➡️6] [@] [5] [ENTER] will set a value of 50%. [@] [7] [ENTER] would set a value of 70%.
+        
+    -   Pressing [ENTER] at the end of value input is optional and does not affect the sequence. In most cases, it will simply terminate the command line.
+        
+    -   [Fixture] # will jump the **live display** screen to the specified fixture if the fixture is not visible on the screen. (Fixture Jumping must be enabled in the **Live Display, {Tools}** (Wrench icon)Pop-up under the **Behavior** Tab
+        
+    -   [Fixture] # [+ ➡️ -] [@] [+] [value] or [@] [-] [value] will make a relative change to the stage value. E.g. {If the stage value is 50, @ + 10 will set the value to 60. @ - 30 would set the value to 20}. The rules for single digit plus Enter will also apply.
+        
+    -   [Fixture] # [➡️] #, Parameter, [@] {value] [➡️] [value] will **fan** the range. (if no parameter is specified, dimmer/intensity will be fanned) 0, and 100% are also valid as well as [Zero] and [Full].
+        
+    -   [Fixture] # [➡️] # Parameter, [@] [value] [➡️][➡️] [value] will **mirror** fan the range. {1➡➡️100 would produce 0, 10, 20, 30, 40, 50, 40, 30, 20, 10, 0}
+        
+    -   Fixture **Dot** = Restore last. Will have a toolbar equivalent.
+        
+    -   Fixture ➡️ = Reeelect Editor. Will have a toolbar equivalent.
+        
+    -   Fixtures and Parameters may be deselected using [RELEASE/DE SEL] Key. This leaves values in the editor but not under the control of the wheels.
+        
+    -   [GROUP] # selects all fixtures that are recorded into the group. *The typed fixture order is preserved in a recorded group.
+        
+    -   With groups, parameters may be fanned via syntax as above, but their recorded order will be considered.
+        
+    -   Control without having to press Shift, Reset, which clears the values in the Editor.
+        
+    -   **{LIBRARY}, {LIBRARY}**, will select and enter values from a library into the Editor. This is especially useful when using position libraries as groups with positions.
+
+
+
 ### Setting Parameters using Main Encoder Wheels
+
+Vibe features the Smart Window to simplify programming. Programming may also be done traditionally using {Bank} keys and the 4 large push wheels: Using parameter wheels:
+
+1.  Fixture # [+ ➡️ -] Tap {Parameter Bank} on the Smart Screen.
+    
+2.  If the required parameter is not shown on the encoder wheel display, tap the {parameter Bank} to scroll through all available parameter pages.
+    
+3.  Turn the encoder wheel of the desired parameter to adjust values.
+    
+
+> <span style="color:Red">Parameters other than dimmer do not use the @ key.</span>.
+
+**Direct entry of absolute values:**
+
+1.  Fixture # [+ ➡️ -] Tap {Parameter Bank} on Smart Screen.
+    
+2.  Tap the {Wheel Display} directly above the physical parameter wheel you wish to enter a value for. The wheel display turns red.
+    
+3.  Enter a value using the keypad.
+    
+
+**Direct entry of values using push wheels:**
+
+1.   Fixture # [+ ➡️ -], Tap {Parameter Bank} on Smart Screen.
+    
+2.  Press physical wheel - Wheel display over the physical wheel turns red.
+    
+3.   Enter value via keypad.
+
+
+
 ### Setting Parameters using Interactive Encoder Wheels
+
+
+Vibe has 4 additional interactive push encoder wheels along the right hand side of the smart screen. The parameters assigned to the wheels are dependent on the bank and selected fixture type: **E.g:**
+
+-   Image assigns Focus and Zoom to the interactive wheels
+    
+-   Color Mix assigns Color Wheel 1+2 to the interactive wheels
+    
+-   Beam assigns Prism and Prism Rotate to the interactive wheels
+    
+-   Shape assigns Focus and Zoom to the interactive wheels In future releases it will be possible for users to customize the defaults.
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2Fgs6aKJiEwFOjMbUqvhMR%2Fimage.png?alt=media&token=b67edcd6-9fc9-4feb-b6e6-f418b3bbc26f)
+
+
 ### Release and Home Sequences
 
+
+**Release - Removes fixtures or fixture parameter values from the editor Release all active fixtures:**
+
+-   Press {RELEASE] key
+    
+
+**Release fixtures:**
+
+-   Fixture # [+ ➡️ -] [RELEASE]
+    
+
+**Release a parameter:**
+
+-   Fixture # [+ ➡️ -] tap {Bank} select {Parameter}, [RELEASE]
+    
+
+**Release a Parameter Bank:**
+
+-   Fixture # [+ ➡️ -] [VIBE] {Bank} [RELEASE] If a fixture is selected and then is made active (Red), the first press of release, releases the parameter and then the second press releases the whole fixture. All devices are assigned home values for parameters based on the manufacturer's DMX chart. By default, these home values are used to tell the system where fixture parameters should be when they are not in use. Vibe has two options for home values. They can be set in the System Settings pop-up in the {Editing Properties} tab under the Default Stage Values header. System settings is accessed via the Vibe Menu or by tapping on the {*****} icon in the lower right corner of the main monitor controller display.
+
+
 ## Groups
+
+
+> <span style="color:Red">The order that fixtures are typed is stored with a group</span>.
+
+**Storing Groups to SKs:**
+
+-   [FIXTURE] [#] [+ ➡️ -] [STORE] tap desired {Group Softkey} - it does not matter if levels are set, they will be ignored.
+    
+
+**Labelling SK Groups:**
+
+-   Directly after storing a group, while the focus is still on the group SK, start typing from the keyboard and a Text Entry pop-up will open.
+    
+-   At any time, pressing the [TEXT] key followed by tapping the SK will open the Text Entry pop-up.
+    
+
+**Storing Groups via keypad syntax:**
+
+-   [FIXTURE] [#] [+ ➡️ -] [#] [GROUP] [#] [STORE].
+    
+-   Pressing the [TEXT] key after any Group store will open the Text Entry popup.
+    
+
+**Modify Groups using Group Settings pop-up:**
+
+-   Using keypad - press [GROUP] [#] [Settings] - the Group Settings pop-up will open. Range text labelling may be done via this method.
+    
+-   Using SKs - Tap the source {GROUP} SK and then press [Settings] key
