--- a/11-Filters.Rmd
+++ b/11-Filters.Rmd
@@ -10,5 +10,71 @@
 
 
 ## On the Fly Filters
+
+
+11.1. On the Fly Filters
+
+On the Fly Filters are used to filter editor parameters when storing cues and scenes.
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FEJeoiQHqDfPKSoWt06GU%2Fimage.png?alt=media&token=b7b254c0-745e-4212-a586-cd78243d90c7)
+
+>Green [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FIxghZd4JbdvIjnwXHGHZ%2Fimage.png?alt=media&token=af78182b-83d8-482b-8ac1-e8edc39f7909" width="30"/>](image.png) indicates parameters that will be included in the cue or scene.
+
+**Store a cue or scene using On The Fly Filters:**
+
+1.  Set or load values into the Editor. CUE] [#] [EDIT] is also valid.
+    
+2.  Press [FILTERS] key.
+    
+3.  The On The Fly Filter pop-up will open.
+    
+4.  De-select banks and parameters that need to be filtered from the cue.
+    
+5.  Press [ENTER] or [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png) . to apply the filter and close the pop-up.
+    
+6.  Store cue or scene. Deselected banks and parameters will not be included.
+
+
+
 ## General Filters Tab
+
+
+Filters may be created "blind" without a fixture and parameter selection. They may be "Include" or "Exclude" depending on how the filters are created. Filters are automatically saved in the **Filters Library.**
+
+**Create "Include" Filter** - Only the parameters in the **Filtered Parameters** box will be in the cue:
+
+1.  Press [VIBE]+[FILTERS] to open the Filters pop-up.
+    
+2.  Make sure the **General Tab** in the lower left corner of the pop-up is selected.
+    
+3.  Press {New} - A new filter will be created with the name {1. Filter 1}.
+    
+4.  Accept the name or type a new name in the white data entry box at the bottom of the Filter's column.
+    
+5.  Tap the parameters you want to be in the "include" filter - The parameter will move from the Available Parameters box to the Filtered Parameters box.
+    
+6.  Press the {Apply} softkey to apply the filter and stay in the pop-up or press [ENTER] or [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png) to apply the filter and close the pop-up.
+
+
 ## Library Defaults Tab
+
+When storing Bank Libraries, filters are used to exclude parameters from unrelated banks. The Library filter defaults are set under the **Filters** pop-up, **Library Defaults** tab.
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FOB6P9V1UrBS3B3nL3xCS%2Fimage.png?alt=media&token=bacc7a0a-0941-455a-af5b-d87706a8c88d)
+
+**Change Library Filter Defaults:**
+
+1.  Press [VIBE]+[FILTERS] to open the Filters pop-up.
+    
+2.  Make sure the **Library Defaults** tab in the lower left corner of the pop-up is selected.
+    
+3.  Tap the {Library Bank} to be edited.
+    
+4.  Tap a parameter in the **Available Parameters** box to move it to the **Filtered Parameters box**.
+    
+5. Press the {Apply} softkey to apply the filter and stay in the pop-up or press [ENTER] or [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png) to apply the filter and close the pop-up.
+    
+
+**Restore Defaults:** - Taping {Restore Defaults} will reset Bank Libraries to their system defaults.
+
+
