--- a/16-Macros.Rmd
+++ b/16-Macros.Rmd
@@ -8,5 +8,102 @@
 
 
 ## Creating Macros
+
+
+Current Macros can only be created using the **Teach Macro** recorder. In future releases this will expand to include manually created macros. Macro time is automatically recorded with macros and the user may decide whether to enable time or ignore it.
+
+**Record a Macro:**
+
+1.  Press [TEACH] - Vibe will enter Teach Macro record mode and the [TEACH] key will flash red.
+    
+2.  Press editor keys or controller buttons as required.
+    
+3.  Press [TEACH] again to terminate the recording - the [TEACH] key will stop flashing and the key presses are now stored in the Macro clipboard.
+    
+4.  Press [STORE] [HERE] to a Macro Softkey. OR
+    
+5.  Press [MACRO] [#] [STORE] - The Macro is now stored.
+    
+6.  Press [TEXT] to open the Text Pop-up and label the Macro - this is only valid directly after storing the MAcro. Alternately [Macro] [#] [TEXT] may be used at any time to label the Macro.
+    
+
+**<span style="color:RoyalBlue">**Record a Macro including timing: Unimplemented**</span>.**
+
+
+1.  Use steps 1 ➡️ 3 to store the macro to the Macro clipboard.
+    
+2.  Press [MACRO] [#] [TIME][STORE] - The Macro is now stored including it's timing.
+    
+
+>Macros may be viewed by adding the EXAM display to any of the **Workspace Template** pages.
+
+
+
 ## Triggrering Macros
+
+
+
+Macros may be directly triggered using the keypad or Macro Softkeys.
+
+**Trigger a Macro using the keypad:**
+
+-   [MACRO] [#] [ENTER]
+    
+
+**Trigger a Macro using Macro Softkeys:**
+
+-   Tap the required {Macro} Softkey.
+    
+
+<span style="color:RoyalBlue">**Trigger a Macro from a Qkey: Currently Unimplemented**</span>
+-   Assign the Macro to the Qkey by pressing [MACRO] [#] [HERE] to any Qkey button.
+    
+-   Press the Qkey button to activate.
+    
+
+
 ## Attaching Macros
+
+
+Macros may be attached and triggered from Qlist Cues.
+
+**Attach a Macro to a Cue:**
+
+-   [CUE] [#] [MACRO] [#] [STORE]
+    
+
+**Release a specific Macro from a Cue:**
+
+-   [CUE] [#] [MACRO] [#] [RELEASE]
+    
+
+**Release all Macros from a Cue:**
+
+-   [CUE] [#] [MACRO] [RLEAEASE]
+    
+
+**Macros are triggered when:**
+
+-   The Qlist is advanced to the cue with the trigger.
+    
+-   [GOTO] commands are used.
+    
+-   [CUE] [#] [GO] is used.
+    
+
+>Back commands will not trigger Macros or Snap.
+
+
+**Temporarily disable triggers:**
+
+1.  Tap the controller display header for the Qlist that contains Macro or Snap triggers - The Qlist Properties pop-up will appear. OR
+    
+2.  [SETTINGS] [HERE] to any controller button and select the Qlist Properties tab.
+    
+3.   Deselect the {Trigger} button - Triggering will be disabled for the incident of the Qlist assigned to that **specific** controller.
+    
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FzU1ZyqbKKgA5t3AWa4Hp%2Fimage.png?alt=media&token=4d787836-c38e-413f-93f8-bd02c85371a6)
+
+
+
